# ERP

./: .gitignore  BOMdialog.ui  CMakeLists.txt  ERP.pro  ERP_database.sql  bomdialog.cpp  bomdialog.h  database.cpp  database.h  defectivedialog.cpp  defectivedialog.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  materialdialog.cpp  materialdialog.h  materialdialog.qml  materialdialog.ui  materialdialogbackend.cpp  materialdialogbackend.h  orderdialog.cpp  orderdialog.h  orderdialog.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  selectmaterialdialog.cpp  selectmaterialdialog.h  selectmaterialdialog.ui  supplierdialog.cpp  supplierdialog.h  supplierdialog.ui  user.cpp  (+1 more)
